// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterRadioGroup - Snapshots > matches snapshot with custom testId 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_3_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="_r_3_"
    class=""
    data-testid="custom-test-id"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="true"
        aria-label="Option 1"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Option 2"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Option 3"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterRadioGroup - Snapshots > matches snapshot with default props 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_0_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="_r_0_"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="true"
        aria-label="Option 1"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Option 2"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Option 3"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterRadioGroup - Snapshots > matches snapshot with disabled item 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_2_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="_r_2_"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="true"
        aria-label="Option 1"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </div>
      <div
        aria-checked="false"
        aria-disabled="true"
        aria-label="Option 2"
        class="flex items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80 cursor-default opacity-20"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Option 3"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterRadioGroup - Snapshots > matches snapshot with selected value 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_1_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Test Filter
    </h2>
  </div>
  <div
    aria-labelledby="_r_1_"
    class=""
    data-testid="filter-test filter-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="false"
        aria-label="Option 1"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-1"
        />
        <span
          class=""
        >
          Option 1
        </span>
      </div>
      <div
        aria-checked="true"
        aria-label="Option 2"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          data-testid="mock-icon-2"
        />
        <span
          class=""
        >
          Option 2
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Option 3"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          data-testid="mock-icon-3"
        />
        <span
          class=""
        >
          Option 3
        </span>
      </div>
    </div>
  </div>
</div>
`;
